# web-spec

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.claude/skills/add-wasm-export/: SKILL.md
.claude/skills/build-wasm/: SKILL.md
.claude/skills/check-exports/: SKILL.md
.claude/skills/debug-window/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/speccy/: SKILL.md
.claude/skills/test/: SKILL.md
Testing/: asm_check.cpp  life.asm  life_rules.cpp  life_run.cpp
docs/: Spectrum128_ROM0.asm  Spectrum128_ROM1.asm  TAURI.md  UI-UX-Design-Brief.md  currah-tech-details.txt  shadowRom22.txt
docs/wiki/: Disk-Copy-Protection.md  Home.md  ZX-Spectrum-Timing.md
proxy/: Dockerfile  package-lock.json  package.json  udp-proxy.js
public/: index.html  service-worker.js  site.webmanifest
public/shaders/: burnin.glsl  composite-decode.glsl  crt.glsl  edge.glsl
roms/: spectranet.rom
scripts/: generate_font.py  generate_roms.sh  release-tauri.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/bindings/: wasm_interface.cpp
src/core/: audio.cpp  audio.hpp  emulator.cpp  emulator.hpp  palette.hpp  sna_loader.cpp  sna_loader.hpp  types.hpp  ula_contention.cpp  ula_contention.hpp
src/core/audio/: audio.cpp  audio.hpp
src/core/debug/: condition_evaluator.cpp  condition_evaluator.hpp
src/core/display/: display.cpp  display.hpp
src/core/loaders/: sna_loader.cpp  sna_loader.hpp  tzx_loader.cpp  tzx_loader.hpp  z80_loader.cpp  z80_loader.hpp
src/core/peripherals/: ay8912.cpp  ay8912.hpp  ay_sound_board.cpp  ay_sound_board.hpp  peripheral.hpp
src/core/ula/: ula_contention.cpp  ula_contention.hpp
src/core/z80/: z80.cpp  z80.hpp  z80_assembler.cpp  z80_assembler.hpp  z80_disassembler.cpp  z80_disassembler.hpp  z80_opcode_tables.cpp  z80_opcodes_cb.cpp  z80_opcodes_dd.cpp  z80_opcodes_ddcb.cpp  z80_opcodes_ed.cpp  z80_opcodes_fd.cpp  z80_opcodes_fdcb.cpp  z80_opcodes_main.cpp  z80_tables.hpp
src/js/: emulator-proxy.js  emulator-worker.js  main.js
src/js/assembler/: asm-highlight.js  assembler-window.js
src/js/audio/: audio-driver.js  audio-worklet.js  sound-window.js
src/js/config/: version.js
src/js/css/: assembler.css  base.css  basic-program.css  cpu-debugger.css  cpu-trace.css  disk-explorer.css  disk-window.css  font-editor.css  joystick-window.css  keyboard-window.css  lenslok.css  memory-heatmap.css  memory-map.css  release-notes.css  retro-debugger.css  rule-builder.css  save-states.css  settings-window.css  spectranet.css  stack-viewer.css  tap-editor.css  tape-window.css  time-travel.css  tnfs-browser.css  udg-editor.css
src/js/debug/: ay-window.js  basic-breakpoint-manager.js  basic-program-window.js  basic-variable-inspector.js  breakpoint-manager.js  cpu-debugger-window.js  cpu-trace-window.js  font-editor-window.js  memory-heatmap-window.js  memory-map-window.js  release-notes-window.js  rule-builder-window.js  spectranet-window.js  stack-viewer-window.js  time-travel-window.js  tnfs-browser-window.js  udg-editor-window.js  z80-disassembler.js
src/js/disk/: disk-explorer-window.js  disk-persistence.js  disk-surface-renderer.js  disk-window.js  dsk-parser.js
src/js/display/: display-settings-window.js  screen-window.js  webgl-renderer.js
src/js/input/: gamepad-handler.js  input-handler.js  joystick-window.js  keyboard-window.js  virtual-gamepad.js  virtual-keyboard.js
src/js/platform/: native-menu.js  native-net.js  runtime.js
src/js/retro-debugger/: gl-text-renderer.js  retro-debugger.js
src/js/snapshot/: sna-loader.js  snapshot-loader.js  snapshot-persistence.js
src/js/spectranet/: network-manager.js  spectranet-persistence.js  tnfs-client.js
src/js/state/: save-states-window.js  state-manager.js  state-persistence.js
src/js/tape/: tap-editor-window.js  tap-parser.js  tape-persistence.js  tape-window.js
src/js/tools/: lenslok-window.js
src/js/ui/: message-panel.js  mobile-detector.js  mobile-menu.js  settings-window.js  theme-manager.js  toast.js
src/js/utils/: indexeddb-helper.js  recent-items-store.js  sinclair-basic-formatting.js  sinclair-basic-highlighting.js  sinclair-basic-parser.js  sinclair-basic-rules.js  sinclair-basic-tokenizer.js  sinclair-basic-tokens.js  zip.js
src/js/windows/: base-window.js  bottom-sheet.js  window-manager.js
src/machines/: audio.cpp  audio.hpp  ay.cpp  ay.hpp  contention.cpp  contention.hpp  display.cpp  display.hpp  machine.hpp  machine_info.hpp  tape_block.hpp  zx_spectrum.cpp  zx_spectrum.hpp
src/machines/basic/: sinclair_basic.hpp  sinclair_basic_float.cpp  sinclair_basic_float.hpp  sinclair_basic_parser.cpp  sinclair_basic_parser.hpp  sinclair_basic_renumber.cpp  sinclair_basic_renumber.hpp  sinclair_basic_tokenizer.cpp  sinclair_basic_tokenizer.hpp  sinclair_basic_variables.cpp  sinclair_basic_variables.hpp  sinclair_basic_writer.cpp  sinclair_basic_writer.hpp
src/machines/currah/: currah_speech.cpp  currah_speech.hpp  sp0256.cpp  sp0256.hpp
src/machines/fdc/: copy_protection.cpp  copy_protection.hpp  disk_image.cpp  disk_image.hpp  upd765a.cpp  upd765a.hpp
src/machines/loaders/: sna_loader.cpp  sna_loader.hpp  tap_loader.cpp  tap_loader.hpp  tzx_loader.cpp  tzx_loader.hpp  z80_loader.cpp  z80_loader.hpp  z80_saver.cpp  z80_saver.hpp
src/machines/opus/: opus_discovery.cpp  opus_discovery.hpp  wd1770.cpp  wd1770.hpp
src/machines/spectranet/: spectranet.cpp  spectranet.hpp  w5100.cpp  w5100.hpp
src/machines/zx128k/: zx_spectrum_128k.cpp  zx_spectrum_128k.hpp
src/machines/zx48k/: zx_spectrum_48k.cpp  zx_spectrum_48k.hpp
src/machines/zx81/: zx81.cpp  zx81.hpp
test-programs/: fntest.bas  vartest.bas
test-programs/halt2int/: delay.asm  execcycle.asm  halt2int.asm  print.asm
tests/: run-tests.sh
tests/disk/: disk_test.cpp
tests/timing/: timing_test.cpp
tests/z80/: z80_test.cpp
(+14 files in other folders)
