[package]
name = "spectrem"
version = "0.12.14"
description = "ZX Spectrum Emulator"
authors = ["Mike Daley <michael_daley@icloud.com>"]
edition = "2021"
rust-version = "1.77.2"

# The library is what `main.rs` (desktop) and the mobile entry points both call
# into, so the emulator's native backend lives here once and is shared.
[lib]
name = "spectrem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "time"] }

[features]
# This feature is used for production builds or when a dev server is not
# specified. DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
